# gosh-dl

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  engine.rs  error.rs  lib.rs  priority_queue.rs
src/http/: connection.rs  crawl.rs  mirror.rs  mod.rs  resume.rs  segment.rs
src/protocol/: recursive.rs
src/storage/: file.rs  mod.rs  sqlite.rs
src/torrent/: choking.rs  mod.rs  peer.rs
src/torrent/utp/: socket.rs
tests/: integration_tests.rs
