[package]
name = "gosh-dl"
version = "0.5.2"
edition = "2021"
rust-version = "1.85"
description = "A fast, embeddable download engine for Rust. HTTP/HTTPS with multi-connection acceleration and full BitTorrent protocol support."
license = "MIT"
repository = "https://github.com/goshitsarch-eng/gosh-dl"
homepage = "https://github.com/goshitsarch-eng/gosh-dl"
documentation = "https://docs.rs/gosh-dl"
readme = "README.md"
authors = ["goshitsarch-eng"]
keywords = ["download", "http", "bittorrent", "torrent", "async"]
categories = ["network-programming", "asynchronous", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "fs", "io-util"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"

# Platform directories
dirs = "6"

# URL encoding/decoding
urlencoding = "2"

# HTTP client (optional — enabled by "http" feature)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "gzip", "brotli"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bencode = { version = "0.2", optional = true }

# Crypto
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.10"
num-bigint = { version = "0.4", optional = true }
num-traits = { version = "0.2", optional = true }
num-integer = { version = "0.1", optional = true }

# Data structures
bytes = "1.11"
bitvec = { version = "1", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

# Rate limiting
governor = "0.10"

# DHT (for BitTorrent)
mainline = { version = "6.1.0", optional = true }

# Multicast sockets (for LPD)
socket2 = { version = "0.6", features = ["all"], optional = true }

# WebSocket (for WSS trackers)
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"], optional = true }

# Base64 encoding
base64 = { version = "0.22", optional = true }

# Error handling
thiserror = "2"

# Storage
rusqlite = { version = "0.38", features = ["bundled"], optional = true }

# Logging
tracing = "0.1"

# URL parsing
url = "2"
scraper = { version = "0.23", optional = true }

# Time
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
tracing-subscriber = "0.3"

[features]
default = ["http", "torrent", "storage"]
http = ["dep:reqwest"]
recursive-http = ["http", "dep:scraper"]
torrent = [
    "dep:reqwest",
    "dep:serde_bencode", "dep:bitvec",
    "dep:num-bigint", "dep:num-traits", "dep:num-integer",
    "dep:mainline", "dep:socket2",
    "dep:tokio-tungstenite", "dep:base64",
]
storage = ["dep:rusqlite"]
full = ["http", "torrent", "storage"]
io-uring = []  # Linux high-performance I/O (future)

[[test]]
name = "mock_peer"
required-features = ["torrent"]

[[test]]
name = "test_helpers"
required-features = ["torrent"]

[[test]]
name = "torrent_integration_tests"
required-features = ["torrent"]

[[test]]
name = "integration_tests"
required-features = ["http"]

[[example]]
name = "magnet_smoke"
required-features = ["torrent"]

[[example]]
name = "http_download"
required-features = ["http"]

[[example]]
name = "torrent_download"
required-features = ["torrent"]

[[example]]
name = "progress_display"
required-features = ["http"]
